hphp/hack/test/package/package_access/cross_package_access_constant1.php.exp.v1
error: Typing[4472] Cannot access class constant `B1` defined in package `pkg2` which may not be available [1]
-> `B1` is defined in cross_package_access_constant1.php--b.php [2]
-> `B1` belongs to package `pkg2` by this package override [3]
-> package `pkg1` is available because the current file belongs to it by this package definition [4]

cross_package_access_constant1.php--a.php:5:3
3 | 
4 | function test(): void {
5 |   B1::FOO;      // error
  |   ^^^^^^^ [1]
6 | }

cross_package_access_constant1.php--b.php:5:7
1 | <?hh
2 | // package pkg2
3 | <<file: __PackageOverride('pkg2')>>
  |                           ^^^^^^ [3]
4 | 
5 | class B1 {
  |       ^^ [2]
6 |   const string FOO = 'foo';
7 | }

PACKAGES.toml:3:11
1 | [packages]
2 | 
3 | [packages.pkg1]
  |           ^^^^ [4]
4 | include_paths=["//"]
5 | 

1 error found
